# Rust_Collator_Grabber

./: .env.example  .gitignore  Cargo.toml  README.md  SETUP.md  config.example.toml
src/: block_tracker.rs  chain_client.rs  config.rs  error.rs  main.rs  metadata.rs  monitor.rs  slack.rs
