[package]
name = "collator-monitor"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
description = "Monitor and auto-register collator candidates on Polkadot system chains"

[dependencies]
# Substrate interaction - subxt 0.44.0 as requested
# Requires Rust 1.83+
subxt = "0.44.0"
subxt-signer = { version = "0.44.0", features = ["sr25519"] }

# BIP39 mnemonic parsing
bip39 = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.14"
dotenvy = "0.15"

# HTTP client for Slack webhook
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Codec
parity-scale-codec = "3"

# Hex encoding/decoding
hex = "0.4"

# SS58 address conversion
sp-core = { version = "34", default-features = false, features = ["std"] }
